Working on interaction content

--- a/aalto.bib
+++ b/aalto.bib
@@ -572,6 +572,22 @@
   journal = {Intergroup behavior}
 }
 
+@article{brynenPeacebuildingGamesSimulations2013,
+  title = {Peacebuilding {{With Games}} and {{Simulations}}},
+  author = {Brynen, Rex and Milante, Gary},
+  year = {2013},
+  month = feb,
+  volume = {44},
+  pages = {27--35},
+  issn = {1046-8781, 1552-826X},
+  doi = {10.1177/1046878112455485},
+  abstract = {Simulations and games can offer valuable insight into the management of conflict and the achievement of peace. This special symposium issue of Simulation \& Gaming examines several such approaches, used in both educational settings and to prepare practitioners to deal with the concrete challenges of peacebuilding. In the introduction, the authors offer some brief thoughts on the how and why of simulations and gamesbased approaches, scenario choices (abstract, fictional, and real world), intended audiences, and design approaches.They also address the question of how games might (or might not) contribute to policy making in this field.},
+  file = {/home/avnerus/Zotero/storage/GEJCBJ3Z/Brynen and Milante - 2013 - Peacebuilding With Games and Simulations.pdf},
+  journal = {Simulation \& Gaming},
+  language = {en},
+  number = {1}
+}
+
 @article{burgoonAdaptationDyadicInteraction1993,
   title = {Adaptation in {{Dyadic Interaction}}: {{Defining}} and {{Operationalizing Patterns}} of {{Reciprocity}} and {{Compensation}}},
   shorttitle = {Adaptation in {{Dyadic Interaction}}},
@@ -595,6 +611,15 @@
   volume = {2},
   pages = {229--285},
   journal = {Handbook of interpersonal communication}
+}
+
+@book{bushPromiseMediationTransformative2004,
+  title = {The Promise of Mediation: {{The}} Transformative Approach to Conflict},
+  author = {Bush, Robert A. Baruch and Folger, Joseph P.},
+  year = {2004},
+  publisher = {{John Wiley \& Sons}},
+  file = {/home/avnerus/Zotero/storage/R9MD6FMC/Bush and Folger - 2004 - The promise of mediation The transformative appro.pdf},
+  isbn = {0-7879-7483-8}
 }
 
 @article{butlerOGCTestbed14Point,
@@ -757,6 +782,22 @@
   isbn = {0-07-222425-8}
 }
 
+@incollection{coburnStorytellingPeacebuildingMethod2011,
+  title = {Storytelling as a {{Peacebuilding Method}}},
+  booktitle = {The {{Encyclopedia}} of {{Peace Psychology}}},
+  author = {Coburn, Clare},
+  editor = {Christie, Daniel J.},
+  year = {2011},
+  month = nov,
+  pages = {wbepp268},
+  publisher = {{Blackwell Publishing Ltd}},
+  address = {{Oxford, UK}},
+  doi = {10.1002/9780470672532.wbepp268},
+  file = {/home/avnerus/Zotero/storage/5JK5P6EA/Coburn - 2011 - Storytelling as a Peacebuilding Method.pdf},
+  isbn = {978-1-4051-9644-4 978-0-470-67253-2},
+  language = {en}
+}
+
 @misc{colaSmallWorldMachines,
   title = {Small {{World Machines}}},
   author = {Cola, Coca}
@@ -887,6 +928,20 @@
   title = {D3-Hero-Hd.Png ({{PNG Image}}, 1130~\texttimes ~1600 Pixels) - {{Scaled}} (57\%)},
   file = {/home/avnerus/Zotero/storage/U39472WH/d3-hero-hd.html},
   howpublished = {https://www.doublerobotics.com/img2/\_2x/d3-hero-hd.png}
+}
+
+@book{daiConflictManagementIntercultural2017,
+  title = {Conflict Management and Intercultural Communication: The Art of Intercultural Harmony},
+  shorttitle = {Conflict Management and Intercultural Communication},
+  editor = {Dai, Xiaodong and Chen, Guo-Ming},
+  year = {2017},
+  publisher = {{Routledge, Taylor \& Francis Group}},
+  address = {{London ; New York}},
+  file = {/home/avnerus/Zotero/storage/ZC9RRQLI/Dai and Chen - 2017 - Conflict management and intercultural communicatio.pdf},
+  isbn = {978-1-138-96283-5 978-1-138-96284-2 978-1-315-26691-6},
+  keywords = {Conflict management,Intercultural communication,Multiculturalism,Social aspects},
+  language = {en},
+  lccn = {HD42 .C664 2017}
 }
 
 @article{daneseSoftMachine2003,
@@ -1160,6 +1215,20 @@
   file = {/home/avnerus/Zotero/storage/8MIZFZS5/Elo and Luoto - 2018 - Figures of touch sense, technics, body.pdf},
   isbn = {978-952-7131-45-9},
   language = {en}
+}
+
+@book{engebretsonInternationalHandbookInterreligious2010,
+  title = {International {{Handbook}} of {{Inter}}-Religious {{Education}}},
+  editor = {Engebretson, Kath and {de Souza}, Marian and Durka, Gloria and Gearon, Liam},
+  year = {2010},
+  volume = {4},
+  publisher = {{Springer Netherlands}},
+  address = {{Dordrecht}},
+  doi = {10.1007/978-1-4020-9260-2},
+  file = {/home/avnerus/Zotero/storage/V8DAUU8Q/Engebretson et al. - 2010 - International Handbook of Inter-religious Educatio.pdf},
+  isbn = {978-1-4020-9273-2 978-1-4020-9260-2},
+  language = {en},
+  series = {International {{Handbooks}} of {{Religion}} and {{Education}}}
 }
 
 @article{erakatHumanitarianLawOperation2014,
@@ -1552,6 +1621,36 @@ Although derived from a relatively small number of studies, these results sugges
   lccn = {HM24 .H3213 1984}
 }
 
+@inproceedings{hamalainenCoOperationAsymmetricForm2019,
+  title = {Co-{{Operation}} as an {{Asymmetric Form}} of {{Human}}-{{Computer Creativity}}. {{Case}}: {{Peace Machine}}},
+  shorttitle = {Co-{{Operation}} as an {{Asymmetric Form}} of {{Human}}-{{Computer Creativity}}. {{Case}}},
+  booktitle = {Proceedings of the {{First Workshop}} on {{NLP}} for {{Conversational AI}}},
+  author = {H{\"a}m{\"a}l{\"a}inen, Mika and Honkela, Timo},
+  year = {2019},
+  pages = {42--50},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Florence, Italy}},
+  doi = {10.18653/v1/W19-4105},
+  abstract = {This theoretical paper identifies a need for a definition of asymmetric co-creativity where creativity is expected from the computational agent but not from the human user. Our co-operative creativity framework takes into account that the computational agent has a message to convey in a co-operative fashion, which introduces a trade-off on how creative the computer can be. The requirements of co-operation are identified from an interdisciplinary point of view. We divide cooperative creativity in message creativity, contextual creativity and communicative creativity. Finally these notions are applied in the context of the Peace Machine system concept.},
+  file = {/home/avnerus/Zotero/storage/NKUQYD89/Hämäläinen and Honkela - 2019 - Co-Operation as an Asymmetric Form of Human-Comput.pdf},
+  language = {en}
+}
+
+@inproceedings{hamalainenCoOperationAsymmetricForm2019a,
+  title = {Co-{{Operation}} as an {{Asymmetric Form}} of {{Human}}-{{Computer Creativity}}. {{Case}}: {{Peace Machine}}},
+  shorttitle = {Co-{{Operation}} as an {{Asymmetric Form}} of {{Human}}-{{Computer Creativity}}. {{Case}}},
+  booktitle = {Proceedings of the {{First Workshop}} on {{NLP}} for {{Conversational AI}}},
+  author = {H{\"a}m{\"a}l{\"a}inen, Mika and Honkela, Timo},
+  year = {2019},
+  pages = {42--50},
+  publisher = {{Association for Computational Linguistics}},
+  address = {{Florence, Italy}},
+  doi = {10.18653/v1/W19-4105},
+  abstract = {This theoretical paper identifies a need for a definition of asymmetric co-creativity where creativity is expected from the computational agent but not from the human user. Our co-operative creativity framework takes into account that the computational agent has a message to convey in a co-operative fashion, which introduces a trade-off on how creative the computer can be. The requirements of co-operation are identified from an interdisciplinary point of view. We divide cooperative creativity in message creativity, contextual creativity and communicative creativity. Finally these notions are applied in the context of the Peace Machine system concept.},
+  file = {/home/avnerus/Zotero/storage/35U47PRV/Hämäläinen and Honkela - 2019 - Co-Operation as an Asymmetric Form of Human-Comput.pdf},
+  language = {en}
+}
+
 @article{hancockMetaAnalysisFactorsAffecting2011,
   title = {A {{Meta}}-{{Analysis}} of {{Factors Affecting Trust}} in {{Human}}-{{Robot Interaction}}},
   author = {Hancock, Peter A. and Billings, Deborah R. and Schaefer, Kristin E. and Chen, Jessie Y. C. and {de Visser}, Ewart J. and Parasuraman, Raja},
@@ -1888,6 +1987,14 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   keywords = {case studies,design,expressive movement,gestures,human-robot interaction,movement,non-anthropomorphic,non-humanoid},
   language = {en},
   number = {1}
+}
+
+@article{honkelaRauhankoneTekoalytutkijanTestamentti2017,
+  title = {Rauhankone: Teko\"alytutkijan Testamentti},
+  author = {Honkela, Timo},
+  year = {2017},
+  publisher = {{Gaudeamus}},
+  isbn = {9524954389}
 }
 
 @article{hoornTheoryRobotCommunication2018,
@@ -2546,6 +2653,14 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   publisher = {{Springer}}
 }
 
+@article{kouluHowWillAI,
+  title = {How {{Will AI Shape}} the {{Future}} of {{Law}}?},
+  author = {Koulu, Edited Riikka and Kontiainen, Laura},
+  pages = {224},
+  file = {/home/avnerus/Zotero/storage/N552STXM/Koulu and Kontiainen - How Will AI Shape the Future of Law.pdf},
+  language = {en}
+}
+
 @inproceedings{kozimaSocialRobotsChildren2006,
   title = {Social Robots for Children: Practice in Communication-Care},
   shorttitle = {Social Robots for Children},
@@ -3006,6 +3121,38 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {1}
 }
 
+@article{maozPeaceBuildingViolent21,
+  title = {Peace {{Building}} in {{Violent Conflict}}: {{Israeli}}-{{Palestinian Post}}-{{Oslo People}}-to-{{People Activities}}},
+  shorttitle = {Peace {{Building}} in {{Violent Conflict}}},
+  author = {Maoz, Ifat},
+  year = {21},
+  volume = {17},
+  pages = {563--574},
+  issn = {0891-4486},
+  doi = {10.1023/B:IJPS.0000019619.70068.9f},
+  file = {/home/avnerus/Zotero/storage/NRFIURGU/Maoz - 2003 - Peace Building in Violent Conflict Israeli-Palest.pdf},
+  journal = {International Journal of Politics, Culture, and Society},
+  language = {en},
+  number = {3}
+}
+
+@article{maozThereContactAll2002,
+  title = {Is There Contact at All? {{Intergroup}} Interaction in Planned Contact Interventions between {{Jews}} and {{Arabs}} in {{Israel}}},
+  shorttitle = {Is There Contact at All?},
+  author = {Maoz, Ifat},
+  year = {2002},
+  month = apr,
+  volume = {26},
+  pages = {185--197},
+  issn = {01471767},
+  doi = {10.1016/S0147-1767(01)00046-3},
+  abstract = {In the past few decades, planned intergroup contact interventions play an important role in attempts at conflict management and peace building. The present research raises a fundamental question regarding these interventions of ``is there contact at all?'' Based on previous research and observations, we claim that the occurrence of intergroup interactions in planned contact interventions between groups in conflict can subject to marked variability. Thus, this study's goal is to construct and apply a measure assessing the extent of intergroup interaction in such interventions. The data was collected through observations of planned encounters between Jews and Arabs that were conducted in Israel in 1999\textendash 2000. The findings show variability in the extent of intergroup interaction in the investigated programs. While the majority of these encounters (Some 65\% of them) were characterized by a high extent of intergroup interaction, some 20\% of them contained a medium level of interaction and some 15\% a low level one. The findings further indicate that programs targeted at high school students and adults were characterized by higher levels of intergroup interaction while programs targeted at preschool to fourth grade children and especially programs targeted at fifth to ninth graders included a lower extent of such interaction. Theoretical and practical implication of these findings are discussed. r 2002 Elsevier Science Ltd. All rights reserved.},
+  file = {/home/avnerus/Zotero/storage/I86KGDEL/Maoz - 2002 - Is there contact at all Intergroup interaction in.pdf},
+  journal = {International Journal of Intercultural Relations},
+  language = {en},
+  number = {2}
+}
+
 @article{marchPlayingClayUncertainty2019,
   title = {Playing with Clay and the Uncertainty of Agency. {{A Material Engagement Theory}} Perspective},
   author = {March, Paul Louis},
@@ -3054,6 +3201,16 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   abstract = {offer an account of the special phenomenology of the body that is consistent with such a perceptual account of sensation: when one feels a sensation, one thereby feels as if something is occurring within one's body / argue for certain consequences of this account / if we take bodily sensation to be perceptual and to have the phenomenological character I suggest, it will turn out that the subject can be aware only of her own body and the parts of her body, and not of things that do not belong to her body at all, through such sensation / [suggests] the awareness one has of one's body through such experience is therefore distinct among the perceptual modes in providing a way in which one can come to be aware of only one object and its parts / in being aware of one's body in this way, one is introspecting the self, albeit in a bodily mode / [argues] against this assimilation of bodily awareness to self-awareness (PsycINFO Database Record (c) 2019 APA, all rights reserved)},
   isbn = {978-0-262-02386-3},
   keywords = {Body Awareness,Perception,Phenomenology,Self-Perception,Somesthetic Perception}
+}
+
+@article{martinUsingIntergroupContact2017,
+  title = {Using an Intergroup Contact Approach to Improve Gender Relationships: {{A}} Case Study of a Classroom-Based Intervention},
+  author = {Martin, Carol Lynn and Fabes, Richard A. and Hanish, Laura D. and Gaertner, Bridget and Miller, Cindy Faith and Foster, Stacie and Updegraff, Kimberly A.},
+  year = {2017},
+  pages = {435--454},
+  publisher = {{Wiley Online Library}},
+  file = {/home/avnerus/Zotero/storage/5J9ZRNUE/Rutland et al. - 2017 - The Wiley Handbook of Group Processes in Children .pdf},
+  journal = {The Wiley handbook of group processes in children and adolescents}
 }
 
 @inproceedings{martiSociallyAssistiveRobotics2006,
@@ -3559,12 +3716,6 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {5}
 }
 
-@misc{NumpySinNumPy,
-  title = {Numpy.Sin \textemdash{} {{NumPy}} v1.9 {{Manual}}},
-  file = {/home/avnerus/Zotero/storage/3TBXQEZ5/numpy.sin.html},
-  howpublished = {https://het.as.utexas.edu/HET/Software/Numpy/reference/generated/numpy.sin.html}
-}
-
 @article{oconnellUnlawfulKillingCombat2009,
   title = {Unlawful Killing with Combat Drones: A Case Study of {{Pakistan}}, 2004-2009},
   author = {O'Connell, Mary Ellen},
@@ -3903,6 +4054,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {5}
 }
 
+@article{pettigrewRecentAdvancesIntergroup2011,
+  title = {Recent Advances in Intergroup Contact Theory},
+  author = {Pettigrew, Thomas F. and Tropp, Linda R. and Wagner, Ulrich and Christ, Oliver},
+  year = {2011},
+  month = may,
+  volume = {35},
+  pages = {271--280},
+  issn = {01471767},
+  doi = {10.1016/j.ijintrel.2011.03.001},
+  abstract = {Recent advances in intergroup contact theory and research are reviewed. A meta-analysis with 515 studies and more than 250,000 subjects demonstrates that intergroup contact typically reduces prejudice (mean r = -.21). Allport's original conditions for optimal contact \textendash equal status, common goals, no intergroup competition, and authority sanction \textendash{} facilitate the effect but are not necessary conditions. There are other positive outcomes of intergroup contact, such as greater trust and forgiveness for past transgressions. These contact effects occur not only for ethnic groups but also for such other groups as homosexuals, the disabled and the mentally ill. Intergroup friendship is especially important. Moreover, these effects typically generalize beyond the immediate outgroup members in the situation to the whole outgroup, other situations, and even to other outgroups not involved in the contact. They also appear to be universal \textendash{} across nations, genders, and age groups. The major mediators of the effect are basically affective: reduced anxiety and empathy. And even indirect contact reduces prejudice \textendash{} vicarious contact through the mass media and having a friend who has an outgroup friend. Of course, negative contact occurs \textendash{} especially when it is non-voluntary and threatening. Criticisms of the theory and policy implications are also discussed.},
+  file = {/home/avnerus/Zotero/storage/3HPZG48X/Pettigrew et al. - 2011 - Recent advances in intergroup contact theory.pdf},
+  journal = {International Journal of Intercultural Relations},
+  language = {en},
+  number = {3}
+}
+
 @article{phillips-silverEcologyEntrainmentFoundations2010,
   title = {The {{Ecology}} of {{Entrainment}}: {{Foundations}} of {{Coordinated Rhythmic Movement}}},
   shorttitle = {The {{Ecology}} of {{Entrainment}}},
@@ -4153,6 +4320,18 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   language = {en}
 }
 
+@book{rutlandWileyHandbookGroup2017,
+  title = {The {{Wiley Handbook}} of {{Group Processes}} in {{Children}} and {{Adolescents}}},
+  editor = {Rutland, Adam and Nesdale, Drew and Brown, Christia Spears},
+  year = {2017},
+  month = jan,
+  publisher = {{John Wiley \& Sons, Ltd}},
+  address = {{Chichester, UK}},
+  doi = {10.1002/9781118773123},
+  isbn = {978-1-118-77312-3 978-1-118-77316-1},
+  language = {en}
+}
+
 @inproceedings{sabanovicPARORobotAffects2013,
   title = {{{PARO}} Robot Affects Diverse Interaction Modalities in Group Sensory Therapy for Older Adults with Dementia},
   booktitle = {2013 {{IEEE}} 13th {{International Conference}} on {{Rehabilitation Robotics}} ({{ICORR}})},
@@ -4192,6 +4371,20 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   file = {/home/avnerus/Zotero/storage/DUFUSNNW/2012-28154-005.html},
   isbn = {978-1-84872-114-2 978-1-84872-054-1 978-0-203-09546-1},
   keywords = {Attitudes,Disadvantaged,Ingroup Outgroup,Intergroup Dynamics,Interpersonal Control,Social Change,Social Perception,Socioeconomic Class Attitudes}
+}
+
+@book{sandoleHandbookConflictAnalysis2009,
+  title = {Handbook of Conflict Analysis and Resolution},
+  editor = {Sandole, Dennis J. D.},
+  year = {2009},
+  publisher = {{Routledge}},
+  address = {{London ; New York}},
+  abstract = {This handbook is a collection of works from leading scholars in the conflict analysis and resolution field, all working from their own disciplines yet cognizant of the multidisciplinary nature of that field},
+  file = {/home/avnerus/Zotero/storage/TY44NLIL/Sandole - 2009 - Handbook of conflict analysis and resolution.pdf},
+  isbn = {978-0-415-43395-2 978-0-203-89316-6},
+  keywords = {Conflict management,International relations},
+  language = {en},
+  lccn = {HM1126 .H347 2009}
 }
 
 @book{sartreBeingNothingness2012,
@@ -5090,6 +5283,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {1}
 }
 
+@article{wagnerContactPrejudiceGermans1989,
+  title = {Contact and Prejudice between {{Germans}} and {{Turks}}: {{A}} Correlational Study},
+  author = {Wagner, Ulrich and Hewstone, Miles and Machleit, Uwe},
+  year = {1989},
+  volume = {42},
+  pages = {561--574},
+  publisher = {{Sage Publications Sage CA: Thousand Oaks, CA}},
+  file = {/home/avnerus/Zotero/storage/F9US7RUQ/001872678904200701.pdf},
+  isbn = {0018-7267},
+  journal = {Human Relations},
+  number = {7}
+}
+
 @book{walkerCognitiveTechnologyEssays2010,
   title = {Cognitive Technology: {{Essays}} on the Transformation of Thought and Society},
   author = {Walker, W. Richard and Herrmann, Douglas J.},
@@ -5115,6 +5321,23 @@ Conclusion
 Mindfulness has been used as a part of the modality of health care. It is clear that mindfulness is another way of dealing with the stressors of the modern heath service in which the students are being introduced. Incorporating this coping strategy into the curriculum ensures that students will have the tools to deal with the stressors of the course, which in turn will enhance the student experience.},
   journal = {Nurse Education Today},
   keywords = {Compassion,Empathy,Mindfulness,Stress,Student nurses}
+}
+
+@article{walkerTacklingStigmaAssociated2013,
+  title = {Tackling Stigma Associated with Intellectual Disability among the General Public: {{A}} Study of Two Indirect Contact Interventions},
+  shorttitle = {Tackling Stigma Associated with Intellectual Disability among the General Public},
+  author = {Walker, Jessica and Scior, Katrina},
+  year = {2013},
+  month = jul,
+  volume = {34},
+  pages = {2200--2210},
+  issn = {08914222},
+  doi = {10.1016/j.ridd.2013.03.024},
+  abstract = {Although evidence abounds that people with intellectual disabilities are exposed to stigma and discrimination, few interventions have attempted to tackle stigma among the general public. This study set out to assess the impact of two brief indirect contact interventions on lay people's inclusion attitudes, social distance and positive behavioral intentions, and to explore emotional reactions towards the two interventions. 925 participants completed the first online survey. Participants were randomized to watch either a 10 min film based on intergroup contact theory, or a film based on a protest message. In total, 403 participants completed the follow-up survey at one month. Both interventions were effective at changing inclusion attitudes and social distance in the short term and these effects were partially maintained at one month. The protest based intervention had a greater effect compared to the contact one on aspects of inclusion attitudes and evoked stronger emotional reactions. Despite small effect sizes, brief indirect contact interventions may have a potential role in tackling public stigma associated with intellectual disability but their effects on behavioral intentions are questionable.},
+  file = {/home/avnerus/Zotero/storage/WQ26WS4V/Walker and Scior - 2013 - Tackling stigma associated with intellectual disab.pdf},
+  journal = {Research in Developmental Disabilities},
+  language = {en},
+  number = {7}
 }
 
 @article{waltherComputermediatedCommunicationImpersonal1996,
@@ -5207,6 +5430,22 @@ Mindfulness has been used as a part of the modality of health care. It is clear 
   doi = {10.4324/9780203193518},
   isbn = {978-0-203-19351-8},
   language = {en}
+}
+
+@article{wesselDoesDiversityUrban2009,
+  title = {Does {{Diversity}} in {{Urban Space Enhance Intergroup Contact}} and {{Tolerance}}?},
+  author = {Wessel, Terje},
+  year = {2009},
+  volume = {91},
+  pages = {5--17},
+  issn = {1468-0467},
+  doi = {10.1111/j.1468-0467.2009.00303.x},
+  abstract = {ABSTRACT. Contemporary urban theory has started to question the elevation of diversity as a panacea for enduring urban problems \textendash{} segregation, prejudice and intergroup hostility. This critique coincides with an opposite tendency within classic contact theory and research. The latter tradition has developed an increasing enthusiasm for face-to-face interaction. The contact hypothesis, which presupposes established contact, has received conclusive support independent of target groups and contact settings. Research on `lived diversity', which includes both contact and lack of contact, offers two supplementary insights. It shows, on the one hand, that boundaries are inscribed in social spaces. Physical proximity between ethnic and social groups tends to have a minor effect on interaction. Interaction, on the other hand, is not essential to attitude formation. Both subfields within contact research have confirmed that urban space may act as a catalyst for tolerant attitudes. This observation corresponds with increasing recognition of affective states, such as empathy, anxiety and group threat. Contact research has therefore, in summary, transcended the scope of the contact hypothesis. It has expanded into the realm of urban theory, which foreshadows future collaboration between the two traditions. Some key points for such exchange are suggested at the end of the article. Future research should combine an open-ended approach to casual contact with a diversified conception of diversity and a richer conception of urban space. A move in this direction would leave substantial space for geographical research.},
+  file = {/home/avnerus/Zotero/storage/IJQEWC4V/Wessel - 2009 - Does Diversity in Urban Space Enhance Intergroup C.pdf;/home/avnerus/Zotero/storage/4WP8R6G7/j.1468-0467.2009.00303.html},
+  journal = {Geografiska Annaler: Series B, Human Geography},
+  keywords = {contact hypothesis,diversity,intergroup contact,prejudice,tolerance,urban space},
+  language = {en},
+  number = {1}
 }
 
 @misc{WhatsAppWeb,
