working on co-design

--- a/aalto.bib
+++ b/aalto.bib
@@ -98,6 +98,23 @@
   language = {en}
 }
 
+@inproceedings{alves-oliveiraYOLORobotCreativity2017,
+  title = {{{YOLO}}, a {{Robot}} for {{Creativity}}: {{A Co}}-{{Design Study}} with {{Children}}},
+  shorttitle = {{{YOLO}}, a {{Robot}} for {{Creativity}}},
+  booktitle = {Proceedings of the 2017 {{Conference}} on {{Interaction Design}} and {{Children}}},
+  author = {{Alves-Oliveira}, Patr{\'i}cia and Arriaga, Patr{\'i}cia and Paiva, Ana and Hoffman, Guy},
+  year = {2017},
+  month = jun,
+  pages = {423--429},
+  publisher = {{ACM}},
+  address = {{Stanford California USA}},
+  doi = {10.1145/3078072.3084304},
+  abstract = {This paper describes the design and development of YOLO, a social robot aimed at boosting creativity in children. Creativity is one of the most sought-after competencies as we move from industrialized economies, in which standardized knowledge was imperative, to creative economies, where the ability to innovate is crucial for the workforce. YOLO is a robot to be used by children as a tool to boost new ideas and stimulate their creativity. This paper describes how established educational strategies that enhance creativity were combined with co-designing with children as informants to reach the the prototype design of the robot.},
+  file = {/home/avnerus/Zotero/storage/YY3WZI79/Alves-Oliveira et al. - 2017 - YOLO, a Robot for Creativity A Co-Design Study wi.pdf},
+  isbn = {978-1-4503-4921-5},
+  language = {en}
+}
+
 @book{amboMechanicalLove2009,
   title = {Mechanical Love},
   author = {Ambo, Phie},
@@ -323,6 +340,22 @@
   journal = {The European Physical Journal A},
   language = {en},
   number = {9}
+}
+
+@article{belkExtendedSelfDigital2013,
+  title = {Extended {{Self}} in a {{Digital World}}: {{Table}} 1.},
+  shorttitle = {Extended {{Self}} in a {{Digital World}}},
+  author = {Belk, Russell W.},
+  year = {2013},
+  month = oct,
+  volume = {40},
+  pages = {477--500},
+  issn = {0093-5301, 1537-5277},
+  doi = {10.1086/671052},
+  file = {/home/avnerus/Zotero/storage/2SF5M4NN/Belk - 2013 - Extended Self in a Digital World Table 1..pdf},
+  journal = {Journal of Consumer Research},
+  language = {en},
+  number = {3}
 }
 
 @article{benkhelifaEnemy,
@@ -1856,6 +1889,15 @@ Conclusion: Factors related to the robot itself, specifically, its performance, 
   journal = {Political Theory},
   language = {en},
   number = {5}
+}
+
+@article{henkemansCodesignPALRobot,
+  title = {Co-Design of the {{PAL}} Robot and Avatar That Perform Joint Activities with Children for Improved Diabetes Self-Management},
+  author = {Henkemans, Olivier A Blanson and Neerincx, Mark A and Oleari, Elettra and Pozzi, Clara},
+  pages = {3},
+  abstract = {Children with type 1 diabetes mellitus need social, cognitive and affective support to develop the required skills and motivation for self-management. A PAL robot and its avatar could complement parents' and caregivers' support by initiating, encouraging and participating in beneficial computerbased activities (e.g., playing educative games). Participatory development with children of this envisioned PAL-system is a challenge. This paper presents a small suite of co-design methods for young end-users, aged 7-14: image-theatre, drawwrite-and-tell, storytelling, photo-elicitation and user journey maps. These methods were valuable as children did not find research participation burdensome, but very pleasurable. Results showed among others that children are knowledgeable about diabetes, but struggle with daily practice of selfmanagement. Finally, they provided a rich set of user requirements and use cases for pervasive, personalized and situated support that are expected to improve children's daily self-management. In three iteration cycles these requirements are being implemented in a prototype, tested and refined, in Italy and the Netherlands.},
+  file = {/home/avnerus/Zotero/storage/9YKD5EJV/Henkemans et al. - Co-design of the PAL robot and avatar that perform.pdf},
+  language = {en}
 }
 
 @book{heppMediatizedWorlds2014,
@@ -3410,6 +3452,22 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   primaryClass = {cs}
 }
 
+@article{messingerReflectionsExtendedSelf2019,
+  title = {Reflections of the Extended Self: {{Visual}} Self-Representation in Avatar-Mediated Environments},
+  shorttitle = {Reflections of the Extended Self},
+  author = {Messinger, Paul R. and Ge, Xin and Smirnov, Kristen and Stroulia, Eleni and Lyons, Kelly},
+  year = {2019},
+  month = jul,
+  volume = {100},
+  pages = {531--546},
+  issn = {01482963},
+  doi = {10.1016/j.jbusres.2018.12.020},
+  abstract = {We examine the relationship between avatars in virtual environments and the people they represent. We find that people (balancing the motives of self-verification and self-enhancement) design their avatars to be similar to their real selves, but with some enhancements that are more attractive. In particular, users most enhance on physical attributes that they perceive to be weak in real life. We also find that avatar attractiveness affects online behavioral traits such as extroversion and loudness. Lastly, we find support for a hierarchy of physical variation across online roles whereby people retain core identity elements (such as gender and race) across all their avatars, but they change peripheral elements (such as hair and clothing, and even face). We conclude by discussing implications of our findings for business and society.},
+  file = {/home/avnerus/Zotero/storage/4ZRYB635/Messinger et al. - 2019 - Reflections of the extended self Visual self-repr.pdf},
+  journal = {Journal of Business Research},
+  language = {en}
+}
+
 @book{meyerIntercorporealityEmergingSocialities2017,
   title = {Intercorporeality: Emerging Socialities in Interaction},
   shorttitle = {Intercorporeality},
@@ -3610,6 +3668,19 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   booktitle = {Proceedings of the 5th International Conference on Autonomous Systems},
   author = {Nakata, Toru and Sato, Tomomasa and Mori, Taketoshi and Mizoguchi, Hiroshi},
   year = {1998}
+}
+
+@inproceedings{ngExaminingEffectsAvatar2013,
+  title = {Examining the Effects of Avatar Customization and Narrative on Engagement and Learning in Video Games},
+  booktitle = {Proceedings of {{CGAMES}}'2013 {{USA}}},
+  author = {Ng, Raymond and Lindgren, Robb},
+  year = {2013},
+  month = jul,
+  pages = {87--90},
+  doi = {10.1109/CGames.2013.6632611},
+  abstract = {While video games have received strong attention for their potential to generate engagement and learning, the specific features of these games that produce these outcomes are still not well understood. This study examined two factors-the ability to customize an avatar and the presence of a strong narrative-for their effects on a player's gaming experience and their subsequent ability to remember events and characteristics in the game. Results of this study showed strong effects for creating a custom avatar on feelings of engagement and presence, and modest effects on measures of learning. There were no significant effects for the narrative manipulation. Interpretations of these results and their implications are discussed.},
+  file = {/home/avnerus/Zotero/storage/JN35PBXL/Ng and Lindgren - 2013 - Examining the effects of avatar customization and .pdf;/home/avnerus/Zotero/storage/7EAAYNEK/6632611.html},
+  keywords = {avatar customization,avatars,Avatars,computer games,Computers,Educational institutions,Games,learning,memory,narrative,narrative manipulation,presence and engagement,video games,Virtual environments,Visualization}
 }
 
 @misc{nicholsBestTelepresenceRobots,
@@ -3959,6 +4030,17 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   number = {9}
 }
 
+@article{perryMachineLearningConflict2013,
+  title = {Machine Learning and Conflict Prediction: A Use Case},
+  author = {Perry, Chris},
+  year = {2013},
+  volume = {2},
+  pages = {56},
+  file = {/home/avnerus/Zotero/storage/Q3DITNNE/2013 - Machine Learning and Conflict Prediction A Use Ca.pdf},
+  journal = {Stability: International Journal of Security and Development},
+  number = {3}
+}
+
 @article{petrjanosovaLanguagesBorderlandsBorders2013,
   title = {Languages of Borderlands, Borders of Languages: {{Native}} and Foreign Language Use in Intergroup Contact between {{Czechs}} and Their Neighbours},
   shorttitle = {Languages of Borderlands, Borders of Languages},
@@ -4197,6 +4279,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   author = {Reben, Alexander},
   howpublished = {http://blabdroid.com/},
   keywords = {embodiment}
+}
+
+@article{reich-stiebertInvolveUserChanging2019,
+  title = {Involve the User! {{Changing}} Attitudes toward Robots by User Participation in a Robot Prototyping Process},
+  author = {{Reich-Stiebert}, Natalia and Eyssel, Friederike and Hohnemann, Charlotte},
+  year = {2019},
+  month = feb,
+  volume = {91},
+  pages = {290--296},
+  issn = {07475632},
+  doi = {10.1016/j.chb.2018.09.041},
+  abstract = {Are students willing to accept robotic support for learning when their attitudes toward educational robots are moderate? Probably not, as evidence from psychological research has suggested that attitudes predict how people will behave toward an attitude object. Consequently, a negative view of robots could represent a strong barrier to the deployment of robots in educational environments. Attitude change might facilitate a smooth introduction of educational robots into learning settings. Thus, the present research builds on the fact that actively including end users in the prototyping process of a robot might increase positive attitudes toward it. Indeed, our research is among the first works which demonstratethat participation in the prototyping process of an educational robot positively affected attitudes toward educational robots in general and significantly reduced educational robot anxiety. However, students' behavioral intentions toward educational robots were not influenced by participation. These findings raise intriguing questions regarding the relevance of user involvement in the development of robots. Therefore, the discussion focuses on how to improve this process and how user involvement in robot design processes provides a valuable contribution to the acceptance of social robots in everyday life.},
+  file = {/home/avnerus/Zotero/storage/6TTTTLY3/Reich-Stiebert et al. - 2019 - Involve the user! Changing attitudes toward robots.pdf},
+  journal = {Computers in Human Behavior},
+  language = {en}
 }
 
 @book{renaudHardwareSoftwarePeopleware2001,
@@ -5015,6 +5112,21 @@ Spotify - https://play.spotify.com/album/1DCQYj...}
   doi = {10.1109/ROBOT.1991.131850},
   abstract = {A flexible microactuator (FMA) driven by an electropneumatic (or electrohydraulic) system has been developed. The FMA has three degrees of freedom, pitch, yaw, and stretch, and these are suitable movements for miniature robotic mechanisms such as fingers, arms, or legs. The construction is of fiber-reinforced rubber, and the mechanism is very simple. Gentle miniature robots with no conventional links can be designed using this design. The FMA's basic characteristics and its applications to certain robot mechanisms are presented. Serially connected FMAs act as a miniature robot manipulator. The kinematics and control algorithm for this type of robot are presented. FMAs combined in parallel act as a multifingered robot hand, with each FMA representing a finger. An algorithm for the cooperative control of such FMAs, the stable region for holding, and its performance are presented.{$<>$}},
   keywords = {actuators,Arm,cooperative control,Electrohydraulics,electropneumatic control equipment,Fingers,flexible microactuator,kinematics,Kinematics,Leg,Legged locomotion,Manipulators,Microactuators,micromechanical devices,miniature robotic mechanisms,pitch,robots,Robots,Rubber,stretch,yaw}
+}
+
+@article{sycaraMachineLearningIntelligent1993,
+  title = {Machine Learning for Intelligent Support of Conflict Resolution},
+  author = {Sycara, Katia P.},
+  year = {1993},
+  month = sep,
+  volume = {10},
+  pages = {121--136},
+  issn = {01679236},
+  doi = {10.1016/0167-9236(93)90034-Z},
+  file = {/home/avnerus/Zotero/storage/EL9PMPHQ/Sycara - 1993 - Machine learning for intelligent support of confli.pdf},
+  journal = {Decision Support Systems},
+  language = {en},
+  number = {2}
 }
 
 @misc{SynonymsVisualityThesaurus,
